[package]
name = "music-converter-ffmpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
rayon = "1.7.0"
tokio = { version = "1.29.1", features = ["full"] }
